Ingress/ingress-deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:50017"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"

    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/limit-rate: "20"
spec:
  rules:
  - host: www.api.stargazing.io
    http:
      paths:
      - path: /
        backend:
          serviceName: apigateway
          servicePort: 80
  - host: www.stargazing.io
    http:
      paths:
      - path: /
        backend:
          serviceName: clickui
          servicePort: 80
